--- a/pages/home.html
+++ b/pages/home.html
@@ -6,22 +6,22 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <title>切割展览会</title>
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/swiper.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/swiper.min.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 <section class="common-header">
     <div class="inner common-container">
         <div class="logo-wrap">
-            <img src="./images/logo@3x.png" class="common-logo">
+            <img src="../images/logo@3x.png" class="common-logo">
         </div>
         <ul class="common-nav">
             <li class="nav-item active">
                 <a href="#">首页</a>
             </li>
             <li class="nav-item">
-                <a href="./introduction.html">简介</a>
+                <a href="./introduction/desc.html">简介</a>
             </li>
 			  <li class="nav-item">
                 <a href="#">展商</a>
@@ -47,7 +47,7 @@
             </div>
             <div class="search-block">
                 <input type="text" placeholder="站内搜索"/>
-                <span class="icon"><img src="./images/search-icon.png"></span>
+                <span class="icon"><img src="../images/search-icon.png"></span>
             </div>
         </div>
     </div>
@@ -55,7 +55,7 @@
 </section>
 <section class="home-page fs-page">
     <div class="banner">
-        <img src="./images/banner@2x.jpg">
+        <img src="../images/banner@2x.jpg">
     </div>
     <div class="bg-color-FEE893">
         <div class="common-container">
@@ -63,7 +63,7 @@
                 <li class="item">
                     <a href="" class="inner-link">
                         <div class="img-wrap">
-                            <img src="./images/one-one.png">
+                            <img src="../images/one-one.png">
                         </div>
                         <div class="desc">
                             <p class="title"><span>展商</span></p>
@@ -73,7 +73,7 @@
                 <li class="item">
                     <a href="" class="inner-link">
                         <div class="img-wrap">
-                            <img src="./images/one-two.png">
+                            <img src="../images/one-two.png">
                         </div>
                         <div class="desc">
                             <p class="title"><span>观众</span></p>
@@ -83,7 +83,7 @@
                 <li class="item">
                     <a href="" class="inner-link">
                         <div class="img-wrap">
-                            <img src="./images/one-three.png">
+                            <img src="../images/one-three.png">
                         </div>
                         <div class="desc">
                             <p class="title"><span>配套活动</span></p>
@@ -93,7 +93,7 @@
                 <li class="item">
                     <a href="" class="inner-link">
                         <div class="img-wrap">
-                            <img src="./images/one-four.png">
+                            <img src="../images/one-four.png">
                         </div>
                         <div class="desc">
                             <p class="title"><span>海外出展</span></p>
@@ -103,7 +103,7 @@
                 <li class="item">
                     <a href="" class="inner-link">
                         <div class="img-wrap">
-                            <img src="./images/one-five.png">
+                            <img src="../images/one-five.png">
                         </div>
                         <div class="desc">
                             <p class="title"><span>下载中心</span></p>
@@ -120,7 +120,7 @@
                 <div class="left">
                     <a href="#">
                         <div class="img-wrap">
-                            <img src="./images/two-one.png">
+                            <img src="../images/two-one.png">
                         </div>
                         <p class="content">上海东浩会展经营有限公司是专为上海世博展览馆在世博会期间的运营管理以及世博会后的开发利用而成立的公司。主要从事展览经营、会议、商务活动、文化娱乐和体育赛事等组织策划等相关业务，包括场馆租赁及管理、活动策划与组织、展台搭建、道具租赁、广告设计、制作、代理及发布等。</p>
                     </a>
@@ -132,7 +132,7 @@
                             <a href="">
                                 <div class="item-left">
                                     <div class="img-wrap">
-                                        <img src="./images/three-one.png" />
+                                        <img src="../images/three-one.png" />
                                     </div>
                                 </div>
                                 <div class="item-right">
@@ -154,7 +154,7 @@
                             <a href="">
                                 <div class="item-left">
                                     <div class="img-wrap">
-                                        <img src="./images/three-one.png" />
+                                        <img src="../images/three-one.png" />
                                     </div>
                                 </div>
                                 <div class="item-right">
@@ -176,7 +176,7 @@
                             <a href="">
                                 <div class="item-left">
                                     <div class="img-wrap">
-                                        <img src="./images/three-three.png" />
+                                        <img src="../images/three-three.png" />
                                     </div>
                                 </div>
                                 <div class="item-right">
@@ -198,7 +198,7 @@
                             <a href="">
                                 <div class="item-left">
                                     <div class="img-wrap">
-                                        <img src="./images/three-four.png" />
+                                        <img src="../images/three-four.png" />
                                     </div>
                                 </div>
                                 <div class="item-right">
@@ -220,7 +220,7 @@
                             <a href="">
                                 <div class="item-left">
                                     <div class="img-wrap">
-                                        <img src="./images/three-one.png" />
+                                        <img src="../images/three-one.png" />
                                     </div>
                                 </div>
                                 <div class="item-right">
@@ -242,7 +242,7 @@
                             <a href="">
                                 <div class="item-left">
                                     <div class="img-wrap">
-                                        <img src="./images/three-one.png" />
+                                        <img src="../images/three-one.png" />
                                     </div>
                                 </div>
                                 <div class="item-right">
@@ -264,7 +264,7 @@
                             <a href="">
                                 <div class="item-left">
                                     <div class="img-wrap">
-                                        <img src="./images/three-three.png" />
+                                        <img src="../images/three-three.png" />
                                     </div>
                                 </div>
                                 <div class="item-right">
@@ -286,7 +286,7 @@
                             <a href="">
                                 <div class="item-left">
                                     <div class="img-wrap">
-                                        <img src="./images/three-four.png" />
+                                        <img src="../images/three-four.png" />
                                     </div>
                                 </div>
                                 <div class="item-right">
@@ -315,7 +315,7 @@
                 <li class="item">
                     <a href="" class="inner-link">
                         <div class="img-wrap">
-                            <img src="./images/four-one.png">
+                            <img src="../images/four-one.png">
                         </div>
                         <div class="desc">
                             <p class="title"><span>酒店</span></p>
@@ -326,7 +326,7 @@
                 <li class="item">
                     <a href="" class="inner-link">
                         <div class="img-wrap">
-                            <img src="./images/four-two.png">
+                            <img src="../images/four-two.png">
                         </div>
                         <div class="desc">
                             <p class="title"><span>餐饮</span></p>
@@ -337,7 +337,7 @@
                 <li class="item">
                     <a href="" class="inner-link">
                         <div class="img-wrap">
-                            <img src="./images/four-three.png">
+                            <img src="../images/four-three.png">
                         </div>
                         <div class="desc">
                             <p class="title"><span>交通</span></p>
@@ -348,7 +348,7 @@
                 <li class="item">
                     <a href="" class="inner-link">
                         <div class="img-wrap">
-                            <img src="./images/four-four.png">
+                            <img src="../images/four-four.png">
                         </div>
                         <div class="desc">
                             <p class="title"><span>旅游</span></p>
@@ -424,32 +424,32 @@
             <ul class="zhuban-list">
                 <li>
                     <a href="">
-                        <img src="./images/five-one.png" />
+                        <img src="../images/five-one.png" />
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/five-two.png" />
+                        <img src="../images/five-two.png" />
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/five-three.png" />
+                        <img src="../images/five-three.png" />
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/five-four.png" />
+                        <img src="../images/five-four.png" />
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/five-five.png" />
+                        <img src="../images/five-five.png" />
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/five-six.png" />
+                        <img src="../images/five-six.png" />
                     </a>
                 </li>
 
@@ -478,34 +478,34 @@
             <div class="item" style="width: 15%">
                 <p class="title">微信</p>
                 <div class="content">
-                    <img src="./images/qrcode.png" />
+                    <img src="../images/qrcode.png" />
                 </div>
             </div>
         </div>
         <ul class="web-access-list">
             <li>
                 <a href="">
-                    <img src="./images/six-one.png" />
+                    <img src="../images/six-one.png" />
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./images/six-two.png" />
+                    <img src="../images/six-two.png" />
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./images/six-three.png" />
+                    <img src="../images/six-three.png" />
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./images/six-four.png" />
+                    <img src="../images/six-four.png" />
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="./images/six-five.png" />
+                    <img src="../images/six-five.png" />
                 </a>
             </li>
         </ul>
@@ -515,8 +515,8 @@
 <div class="am-back-top" id="huitop" style="display: none">
     <a title="返回顶部" class="am000 am111"></a>
 </div>
-<script src="./js/jquery-3.1.0.min.js"></script>
-<script src="./js/swiper.min.js"></script>
+<script src="../js/jquery-3.1.0.min.js"></script>
+<script src="../js/swiper.min.js"></script>
 <script>
     $(function () {
         var newBlockRight = $('.news-block > .right');
